--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
             <li><a href="#contact">Contact</a></li>
             <li>
                 <!-- Link to your CV file -->
-                <a href="https://github.com/your-username/your-username.github.io/raw/main/Syeda_Aisha_Huda_CV.pdf" class="btn-nav" target="_blank" rel="noopener noreferrer">CV</a>
+                <a href="https://github.com/aishahuda/aishahuda/raw/main/Aisha_Huda_CV.pdf" class="btn-nav" target="_blank" rel="noopener noreferrer">CV</a>
             </li>
         </ul>
     </nav>
@@ -507,7 +507,7 @@
                         <div class="hero-buttons">
                             <a href="#projects" class="btn">View My Work</a>
                             <!-- Link to your CV file -->
-                            <a href="https://github.com/your-username/your-username.github.io/raw/main/Syeda_Aisha_Huda_CV.pdf" class="btn" target="_blank" rel="noopener noreferrer">Download CV</a>
+                            <a href="https://github.com/aishahuda/aishahuda/raw/main/Aisha_Huda_CV.pdf" class="btn" target="_blank" rel="noopener noreferrer">Download CV</a>
                         </div>
                     </div>
                     <div class="hero-image">
