--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                     <div class="hero-image">
                         <div class="hero-image-wrapper">
                             <!-- REPLACE THIS with the link to your photo -->
-                            <img src="https://i.imgur.com/r62Lh7s.png" alt="Syeda Aisha Huda Profile Picture">
+                            <img src="aisha_huda_picture.png" alt="Syeda Aisha Huda Profile Picture">
                         </div>
                     </div>
                 </div>
